Fix overflow issues

--- a/scss/blocks/footer.scss
+++ b/scss/blocks/footer.scss
@@ -1,7 +1,6 @@
-@use '../colors';
+@use "../colors";
 
 .footer {
-    width: 100%;
     background-color: colors.$dark-gray;
 
     &__wrapper {
@@ -14,7 +13,7 @@
         @media (max-width: 1024px) {
             padding: 30px 0 40px;
         }
-    
+
         @media (max-width: 664px) {
             flex-direction: column;
             justify-content: flex-start;
