--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -26,8 +26,10 @@ body {
     color: colors.$white;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     min-width: 320px;
+    overflow-x: hidden;
+    height: auto;
 
     ::selection {
         color: colors.$quite-black;
@@ -38,10 +40,6 @@ body {
         font-size: 16px;
         line-height: 1.625;
     }
-}
-
-main {
-    width: 100%;
 }
 
 a,
